@@ -18,6 +18,7 @@ CURRENT VERSION:
 	copyright date fixed in About box
 	memory usage smaller for PicturePanel, Castle in the Sky.map OutOfMemoryError
 	can click to toggle animation at the end of the game
+	mission to destroy a player show the players color as well as the name
 
 1.1.0.7 (11.03.2012)
 
